--- a/Webserver/index.html
+++ b/Webserver/index.html
@@ -10,22 +10,24 @@
               </body>
               <h6 style="text-align: center;">Aero 402
         <center>
-        <form action="./Forward">
+        <a href="/lcdtoggle">
+        <form href=\"/forward\">
         <input type="submit" value="Forward" style="background-color: #04AA6D; border-radius: 15px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px"  />
         </form>
         <table><tr>
-        <td><form action="./Left">
+        <td><form href="/left">
         <input type="submit" value="Left" style="background-color: #04AA6D; border-radius: 15px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px"/>
         </form></td>
-        <td><form action="./Stop">
-        <input type="submit" value="Stop" style="background-color: #FF0000; border-radius: 50px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px" />
+        <td><form href="/enable">
+        <input type="submit" value="Enable" style="background-color: #FF0000; border-radius: 50px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px" />
         </form></td>
-        <td><form action="./Right">
+        <td><form href="/right">
         <input type="submit" value="Right" style="background-color: #04AA6D; border-radius: 15px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px"/>
         </form></td>
         </tr></table>
-        <form action="./Backward">
+        <form href="/backward">
         <input type="submit" value="Backward" style="background-color: #04AA6D; border-radius: 15px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px"/>
         </form>
         </body>
         </html>
+
