remove errors in index.html

--- a/Webserver/index.html
+++ b/Webserver/index.html
@@ -6,26 +6,25 @@
         </head>
         <body>
          
-              <h1 style="text-align: center;">ALARS Remote Control
+              <h1 style="text-align: center;">Raspberry Pi Pico W Wireless Car
               </body>
-              <h6 style="text-align: center;">Aero 402
+              <h6 style="text-align: center;">DIY Projects Lab
         <center>
-        <a href="/lcdtoggle">
-        <form href=\"/forward\">
+        <form action="./Forward">
         <input type="submit" value="Forward" style="background-color: #04AA6D; border-radius: 15px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px"  />
         </form>
         <table><tr>
-        <td><form href="/left">
+        <td><form action="./Left">
         <input type="submit" value="Left" style="background-color: #04AA6D; border-radius: 15px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px"/>
         </form></td>
-        <td><form href="/enable">
-        <input type="submit" value="Enable" style="background-color: #FF0000; border-radius: 50px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px" />
+        <td><form action="./Stop">
+        <input type="submit" value="Stop" style="background-color: #FF0000; border-radius: 50px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px" />
         </form></td>
-        <td><form href="/right">
+        <td><form action="./Right">
         <input type="submit" value="Right" style="background-color: #04AA6D; border-radius: 15px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px"/>
         </form></td>
         </tr></table>
-        <form href="/backward">
+        <form action="./Backward">
         <input type="submit" value="Backward" style="background-color: #04AA6D; border-radius: 15px; height:120px; width:120px; border: none; color: white; padding: 16px 24px; margin: 4px 2px"/>
         </form>
         </body>
